--- a/src/components/logo/style.css
+++ b/src/components/logo/style.css
@@ -2,14 +2,12 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 32px;
   line-height: 38px;
   text-transform: uppercase;
   color: var(--color-blue-700);
-  transition:
-    color 0.3s ease-in-out,
-    border 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
 }
 
 .logo__link {
@@ -27,7 +25,8 @@
 
 @media only screen and (max-width: 26.25em) {
   .logo {
-    font-size: 28px;
-    line-height: 34px;
+    font-size: 24px;
+    line-height: 30px;
+    letter-spacing: -1px;
   }
 }
